[package]
name = "musicboom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = "7.1.11"
jack = "0.11.4"
biquad = "0.4.2"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }
